# cookiecutter-django

./: .editorconfig  .gitignore  README.md  cookiecutter.json  pytest.ini  requirements.txt
hooks/: post_gen_project.py  (+1 more)
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  Makefile  Pipfile  README.md  app-template.tar.xz  conftest.py  copy_boostrap.py  copy_clientside_libraries.py  fixtures.json  initialize-demo.sh  install-demo.sh  install.sh  local.yml  manage.py  merge_production_dotenvs_in_dotenv.py  package-lock.json  package.json  production.yml  pyproject.toml  {{cookiecutter.project_slug}}.sublime-project
{{cookiecutter.project_slug}}/.envs/.local/: .django  .postgres
{{cookiecutter.project_slug}}/accounts/: adapters.py  admin.py  apps.py  filters.py  forms.py  models.py  permissions.py  schema.py  serializers.py  urls.py
{{cookiecutter.project_slug}}/common/: apps.py  mixins.py  setup.py  utils.py  validation.py
{{cookiecutter.project_slug}}/config/: asgi.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/git-hooks/: pre-commit
{{cookiecutter.project_slug}}/locale/: README.md
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt  production.txt
{{cookiecutter.project_slug}}/showcase/: apps.py  filters.py  forms.py  tables.py  urls.py
{{cookiecutter.project_slug}}/taskapp/: celery.py
{{cookiecutter.project_slug}}/templates/: 404.html  500.html  base.html  navbar.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: conftest.py
(+126 files in other folders)
