[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
{%- if cookiecutter.use_jwt == 'y' %}
djangorestframework_simplejwt = "^4.1"
{%- endif %}
djangorestframework-filters = "1.0.0.dev0"
djangorestframework = "^3.9"
django-cors-headers = "^2.5"
graphene-django = "^2.2"
django = "^2.2"
django-environ = "^0.4.5"
django-allauth = "^0.39.1"
django-crispy-forms = "^1.7"
{%- if cookiecutter.use_sass_preprocessor == 'y' %}
django-compressor = "^2.2"
libsass = "^0.18.0"
django-sass-processor = "^0.7.3"
{%- endif %}
django-redis = "^4.10"
django-filter = "^2.1"
django-tables2 = "^2.0"
{%- if cookiecutter.pdf_plugin == 'y' %}
tablib = "^0.13.0"
django-weasyprint = "^0.5.4"
{%- endif %}
{%- if cookiecutter.use_channels == 'y' %}
channels = "^2.1"
channels_redis = "^2.3"
{%- endif %}
Pillow = "^6.0"
argon2-cffi = "^19.1"
{%- if cookiecutter.use_celery == "y" %}
celery = "^4.3"
flower = "^0.9.3"
{%- endif %}
psycopg2 = "^2.8"
[tool.poetry.dev-dependencies]
pytest = "^4.4"
pytest-cov = "^2.6"
pytest-sugar = "^0.9.2"
freezegun = "^0.3.11"
factory-boy = "^2.11"
django-extensions = "^2.1"
pytest-django = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
